# django-sensorthings

./: .gitignore  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  pyproject.toml
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/actions/commit-and-push/: action.yml
.github/workflows/: main.yml  release.yaml  release.yml  test.yaml  test.yml
src/sensorthings/: admin.py  apps.py  checks.py  conf.py  defaults.py  models.py  routes.py  schema.py  serializers.py  tests.py  urls.py  views.py
src/sensorthings/db/: core.py  models.py
src/sensorthings/migrations/: 0001_initial.py  0002_addr_has_owner_addr_is_private_addr_is_public_and_more.py
src/sensorthings/routes/: api.py  jwt.py  swagger.py
tests/: settings.py  test_api.py  test_checks.py  test_conf.py  test_models.py  test_serializers.py  urls.py  utils.py
